--- a/myRentalCarProject/index.html
+++ b/myRentalCarProject/index.html
@@ -47,7 +47,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a href="#" class="navbar-brand">imFuckingAmazing</a>
+                        <a href="#" class="navbar-brand">Some Brand</a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav nav">
